[gd_scene load_steps=18 format=3 uid="uid://dd6gbw430y2o2"]

[ext_resource type="Script" path="res://Arcade/Init.gd" id="1_16vuu"]
[ext_resource type="Texture2D" uid="uid://pyvvn1ke0fps" path="res://Tiles/Possible moves.png" id="3_jbkcg"]
[ext_resource type="Texture2D" uid="uid://bc23vwhagr0bc" path="res://knight.png" id="5_vnl00"]
[ext_resource type="Script" path="res://Arcade/WinBox.gd" id="6_h2ao0"]
[ext_resource type="PackedScene" uid="uid://dvgn70fdskqq3" path="res://Arcade/ScoreThing.tscn" id="6_pbksx"]
[ext_resource type="Theme" uid="uid://bdmxkgmnpk8n1" path="res://Arcade/UI.tres" id="6_udx81"]
[ext_resource type="FontFile" uid="uid://d0dpx0r6g8exf" path="res://Fonts/JetBrains Mono ExtraBold Nerd Font Complete.ttf" id="7_3vtl1"]
[ext_resource type="Script" path="res://Gameplay/DisplayMoves.gd" id="10_ajksi"]

[sub_resource type="Gradient" id="Gradient_tqsf8"]
offsets = PackedFloat32Array(0.693989)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u7usj"]
gradient = SubResource("Gradient_tqsf8")
width = 1920
height = 1080

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8ge27"]
texture = ExtResource("3_jbkcg")
texture_region_size = Vector2i(120, 120)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i4bk0"]
texture = ExtResource("5_vnl00")
texture_region_size = Vector2i(180, 180)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_h6y1n"]
tile_size = Vector2i(160, 160)
sources/1 = SubResource("TileSetAtlasSource_8ge27")
sources/2 = SubResource("TileSetAtlasSource_i4bk0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrjm4"]
bg_color = Color(1, 0.615686, 0, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apbw3"]
bg_color = Color(0.6, 0.6, 0.6, 0.588235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrjjs"]
bg_color = Color(0.84, 0.4088, 0.1932, 0.588235)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="TileSet" id="TileSet_krn7s"]
tile_size = Vector2i(160, 160)
sources/1 = SubResource("TileSetAtlasSource_8ge27")
sources/2 = SubResource("TileSetAtlasSource_i4bk0")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_16vuu")
colors = Array[Color]([Color(0.4, 0.301961, 0.215686, 1), Color(0.266667, 0.45098, 0.541176, 1), Color(0.235294, 0.486275, 0.239216, 1), Color(0.682353, 0.223529, 0.309804, 1), Color(0.670588, 0.301961, 0, 1), Color(0.615686, 0.00392157, 0.870588, 1)])

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(-128, -320)

[node name="Sprite2D" type="Sprite2D" parent="Camera"]
modulate = Color(0.4, 0.301961, 0.215686, 1)
z_index = -5
texture = SubResource("GradientTexture2D_u7usj")

[node name="Knight" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(-288, -352)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_vnl00")

[node name="TileMap2" type="TileMap" parent="Knight"]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(-161, -159)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_h6y1n")
format = 2
layer_0/tile_data = PackedInt32Array(-2, 1, 0, 131070, 1, 0, -65534, 1, 0, 131072, 1, 0, 65538, 1, 0, -131072, 1, 0)
script = ExtResource("10_ajksi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -289.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("6_udx81")

[node name="Text Move Count" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Nombre de mouvements"

[node name="Data Move Count" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 16.0
offset_right = 136.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("7_3vtl1")
theme_override_font_sizes/font_size = 64
text = "XXX"
horizontal_alignment = 1

[node name="Text Complete Percentage" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_top = 104.0
offset_right = 40.0
offset_bottom = 127.0
text = "Complété à"

[node name="Data Complete Percentage" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = -3.0
offset_top = 102.0
offset_right = 164.0
offset_bottom = 193.0
theme_override_fonts/font = ExtResource("7_3vtl1")
theme_override_font_sizes/font_size = 64
text = "100%"
horizontal_alignment = 1

[node name="Data Complete Amount" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_top = 163.0
offset_right = 171.0
offset_bottom = 211.0
theme_override_fonts/font = ExtResource("7_3vtl1")
theme_override_font_sizes/font_size = 32
text = "(100/100)"
horizontal_alignment = 1

[node name="Text Timer" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_top = 224.0
offset_right = 107.0
offset_bottom = 250.0
text = "Temps écoulé"

[node name="Data Timer" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_top = 224.0
offset_right = 190.0
offset_bottom = 315.0
theme_override_fonts/font = ExtResource("7_3vtl1")
theme_override_font_sizes/font_size = 64
text = "00:00"
horizontal_alignment = 1

[node name="Leaderboard" type="Control" parent="CanvasLayer/Panel"]
layout_mode = 1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/Leaderboard"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -11.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Classement"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel/Leaderboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]XX / #Guigui / ??:??
XX / G-UI / ??:??
XX / [null] / ??:??
XX / Avery / ??:??
XX / Gui / ??:??
XX / Enyx / ??:??
XX / Wirequin / ??:??"

[node name="WinBox" type="Panel" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 102.0
offset_top = 43.0
offset_right = 613.0
offset_bottom = -43.0
grow_vertical = 2
theme = ExtResource("6_udx81")
script = ExtResource("6_h2ao0")
disabledPos = Vector2(102, 800)
enabledPos = Vector2(102, 43)
specialColors = Array[StyleBox]([SubResource("StyleBoxFlat_vrjm4"), SubResource("StyleBoxFlat_apbw3"), SubResource("StyleBoxFlat_vrjjs")])

[node name="Label" type="Label" parent="CanvasLayer/WinBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -10.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_3vtl1")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreRegisterField" type="Panel" parent="CanvasLayer/WinBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 130.0
grow_horizontal = 2

[node name="ScoreRegisterLabel" type="Label" parent="CanvasLayer/WinBox/ScoreRegisterField"]
layout_mode = 0
offset_right = 511.0
offset_bottom = 26.0
text = "Ajoute ton score au classement!"
horizontal_alignment = 1

[node name="InputField" type="LineEdit" parent="CanvasLayer/WinBox/ScoreRegisterField"]
layout_mode = 0
offset_left = 56.0
offset_top = 20.0
offset_right = 402.0
offset_bottom = 61.0
placeholder_text = "Prénom, nom, ou pseudo"
editable = false
context_menu_enabled = false
caret_blink = true

[node name="ScorePreview" type="Label" parent="CanvasLayer/WinBox/ScoreRegisterField"]
layout_mode = 0
offset_left = 408.0
offset_top = 27.0
offset_right = 448.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("7_3vtl1")
text = "XXX"
vertical_alignment = 1

[node name="ScoreDatabase" type="ScrollContainer" parent="CanvasLayer/WinBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinBox/ScoreDatabase"]
layout_mode = 2

[node name="Score" parent="CanvasLayer/WinBox/ScoreDatabase/VBoxContainer" instance=ExtResource("6_pbksx")]
layout_mode = 2

[node name="Cancel" type="Button" parent="CanvasLayer/WinBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_top = -15.0
offset_right = 103.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
text = "Relancer une partie"

[node name="PossibleMoves" type="Panel" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -459.0
offset_top = -171.0
offset_right = -296.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("6_udx81")

[node name="PossMoveLabel" type="Label" parent="CanvasLayer/PossibleMoves"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 21.0
grow_horizontal = 2
text = "Mouvements possibles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileMap" type="TileMap" parent="CanvasLayer/PossibleMoves"]
position = Vector2(69, 76)
scale = Vector2(0.15, 0.15)
tile_set = SubResource("TileSet_krn7s")
format = 2
layer_0/tile_data = PackedInt32Array(-2, 1, 0, 131070, 1, 0, -65534, 1, 0, 0, 2, 0, 131072, 1, 0, 65538, 1, 0, -131072, 1, 0)
script = ExtResource("10_ajksi")

[connection signal="text_submitted" from="CanvasLayer/WinBox/ScoreRegisterField/InputField" to="CanvasLayer/WinBox" method="set_player_name"]
[connection signal="pressed" from="CanvasLayer/WinBox/Cancel" to="." method="reload_level"]
[connection signal="pressed" from="CanvasLayer/WinBox/Cancel" to="CanvasLayer/WinBox" method="change_visibility" binds= [false]]
